--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "http-proxy-middleware": "^3.0.5",
     "mysql2": "^3.14.2",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "uuid": "^11.1.0"
   },
   "type": "module"
 }
