--- a/backend/auth-service/package.json
+++ b/backend/auth-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gateway",
+  "name": "auth-service",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,10 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2"
-  },
-  "type": "module"
+  }
 }
